--- a/src/app/mandate/mandate.component.html
+++ b/src/app/mandate/mandate.component.html
@@ -31,27 +31,29 @@
                     </tr>
                     <tr>
                         <th>Mandate issued to</th>
-                        <td><input type="text" disabled class="form-inputs" placeholder="corporate name"></td>
+                        <td><input type="text" disabled class="form-inputs" placeholder="corporate name"
+                            [(ngModel)]="customer.corporateName" name = "corporateName"></td>
                     </tr>
                     <tr>
                         <th>Start Date</th>
-                        <td><input type="date" disabled class="form-inputs"></td>
+                        <td><input type="date" disabled class="form-inputs"
+                            [(ngModel)]="customer.startDt" name = "startDt"></td>
                     </tr>
                     <tr>
                         <th>End Date</th>
-                        <td><input type="date" disabled class="form-inputs"></td>
+                        <td><input type="date" disabled class="form-inputs"
+                            [(ngModel)]="customer.endDt" name = "endDt"></td>
                     </tr>
                     <tr>
                         <th>Frequency</th>
-                        <td><select class="form-inputs" disabled>
-                                <option value="Monthly">Monthly</option>
-                                <option value="Quaterly">Quaterly</option>
-                                <option value="Half_Yearly">Half Yearly</option>
-                            </select></td>
+                        <td><input type="text" disabled class="form-inputs"
+                            [(ngModel)]="customer.frequency" name = "frequency"></td>
                     </tr>
                     <tr>
                         <th>Amount in figures</th>
-                        <td><input type="text" class="form-inputs-rupee" placeholder="rupee" disabled><input type="text"
+                        <td><input type="text" class="form-inputs-rupee" placeholder="rupee" disabled
+                            [(ngModel)]="customer.amount" name = "amount">
+                            <input type="text"
                                 class="form-inputs-paise" placeholder="paise" disabled></td>
                     </tr>
                     <tr>
@@ -65,7 +67,7 @@
                 </table>
 
                 <div class="buttons">
-                    <button class="proceed-button" type="submit">Proceed</button>
+                    <button class="proceed-button" type="submit" routerLink = "/proceed">Proceed</button>
                     <button class="Cancel-button">Cancel</button>
                 </div>
                 <div class="Images">
