--- a/src/app/reject-mandate/reject-mandate.component.html
+++ b/src/app/reject-mandate/reject-mandate.component.html
@@ -1,31 +1,33 @@
-<div class="Bank-logo">
-  <div class="logo">
-      <p>Bank Logo</p>
+<div class="body">
+    <div class="Bank-logo">
+      <div class="logo">
+          <p>Bank Logo</p>
+      </div>
   </div>
-</div>
-<div class="bank-use">
-  <p class="bank-area-text">
-      (Banks use) This area can be used
-       by the bank for their promotional 
-       message, other related information
-  </p>
-</div>
-<div class="rejection-reason-area">
-  <img src="cancel-xxl.png"
-   class="cancel-image">
-   <p class="rejection-area-text">Your E-Mandate registration is rejected
-        due to <b>( reason for rejection )</b></p>
-</div>
-<div class="clarification-area">
-  <p>For clarifications please
-       write to xxxxxx@xxxx.xx or call xxxxxxxxxxx</p>
-</div>
-<p class="powered-by">E-Mandate powered by</p>
-              <div class="brands">
-                  <div class="brands__image-wrapper">
-                      <img src="../assets/NACH-Logo.png" class="brands__image" />
+  <div class="bank-use">
+      <p class="bank-area-text">
+          (Banks use) This area can be used
+           by the bank for their promotional 
+           message, other related information
+      </p>
+  </div>
+  <div class="rejection-reason-area">
+      <img src="../assets/cancel-xxl.png"
+       class="cancel-image">
+       <p class="rejection-area-text">Your E-Mandate registration is rejected
+            due to <b>( reason for rejection )</b></p>
+  </div>
+  <div class="clarification-area">
+      <p>For clarifications please
+           write to xxxxxx@xxxx.xx or call xxxxxxxxxxx</p>
+  </div>
+  <p class="powered-by">E-Mandate powered by</p>
+                  <div class="brands">
+                      <div class="brands__image-wrapper">
+                          <img src="../assets/NACH-Logo.png" class="brands__image" />
+                      </div>
+                      <div class="brands__image-wrapper">
+                          <img src="../assets/NACH.jpg" class="brands__image" />
+                      </div>
                   </div>
-                  <div class="brands__image-wrapper">
-                      <img src="../assets/NACH.jpg" class="brands__image" />
-                  </div>
-              </div>
+                </div>
