--- a/src/app/confirm-mand/confirm-mand.component.css
+++ b/src/app/confirm-mand/confirm-mand.component.css
@@ -1,115 +1,93 @@
 .body{
-    border: 1px solid black;
-    width: 80%;
-    max-width: 600px;
     margin: 0 auto;
-}
-.Bank-logo{
-    margin: 5px 5px 5px 5px;
-    border: 4px solid black;
-    height: 80px;
-    text-align: center;
-}
-.Bank-use{
-    border:4px solid black;
-    margin:25px 5px 25px 5px;
-    height: 100px;
-    text-align: center; 
-}
-.desc-text{
-    margin:0px 5px 0px 5px;
-    text-align: left;
-}
-.text{
-    padding: 0.4em;
-    font-size: medium;
-    
-}
-table,tr{
-    width: 100%;
-    padding: 0.5em;
-    height: 20px;
-}
-.account-input{
-   padding: 0px 250px 0px 20px;
-}
-
-.mandate-details {
-    padding: 20px 30px;
-}
-
-.mandate{
-    margin:15px 5px 15px 5px;
-    border:4px solid black;
-}
-.mandate-text{
-    border:4px solid black;
-    text-align: center;
-    height: 30px;
-}
-h3{
-    margin: 5px 0px 0px 0px;
-}
-th,td{
-    padding:10px 0px 0px 0px;
-}
-
-td{
-    text-align: left;    
-
-}
-th{
-}
-.mandate-form-input{
-    width: 85%;
-    
-
-    
-}
-.mandate-form-input-rupee{
-    width: 64%;
-    
-
-}
-.mandate-form-input-paise{
-    width: 21%;
-}
-.mandate-text-area{
-    width: 100%;
-    resize: none;
-}
-
-.checkbox1-text{
-    font-size: 13px;
-    text-align: left;
-    
-}
-.checkbox1-label{
-    margin: 0px 0px 0px 35px;
+    width: 60%;
     border: 1px solid black;
-    text-align: left;
 }
+.bank-logo{
+    border-bottom: 2px solid black;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.mandate-checkboxes {
-    margin: 20px 0;
 }
-
-.mandate-checkbox1{
-    size: 10px;
+.bank-logo-text{
+    font-size: 1.5vw;
 }
-
-.checkbox-grid {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 10px;
-    margin: 15px 0;
+.bank-use{
+    border: 2px solid black;
+    display: flex;
+    margin: 30px auto;
+    height: 12%;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+   
 }
-
-.checkbox-grid__text {
-    margin: 0;
-    font-size: 14px;
+.bank-use-text{
+    font-size: 1vw;
+    
 }
+.confirmation-form{
+    /* border: 1px solid black; */
+    display: flex;
+    margin:15px auto;
+    width: 60%;
+    justify-content: space-around;
+    border-collapse: collapse;
+}
+.confirmation-label{
+    flex: 1;
+}
+.confirmation-input{
+    flex: 1;
+    border: 2px solid black;
+}
+.confirmation-label-amount{
+    /* border: 1px solid black; */
+    width: 80%;
+    flex-grow: 1;
+}
+.confirmation-input-rupee{
+    width: 60%;
+    border: 2px solid black;
+    
+}
+.confirmation-input-paise{
+    width: 20%;
+    border: 2px solid black;
+}
+.success-area{
+    margin: 50px auto;
+    width: 80%;
+    display: flex;
+    justify-content:flex-start;
 
+}
+.tick{
+    margin :auto auto;
+    /* height: 15%; */
+    /* border: 1px solid black; */
+    width: 5%;
+    
+    
+}
+.success-text{
+    margin: auto auto;
+    width: 100%;
+    /* flex: 1; */
+   /* border: 1px solid black; */
+    font-size: 1.2vw;
+    text-align: center;
+}
+.query-area{
+    margin: 50px auto;
+    width: 60%;
+    display: flex;
+}
+.query-text{
+    text-align: center;
+}
 .powered-by {
     text-align: center;
     margin: 45px 0 10px 0;
@@ -129,71 +107,4 @@ th{
     display: block;
     width: 100%;
     height: auto;
-}
-
-/* ----------------------------------- */
-.mandate-form-grid {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 20px 20px;
-    margin: 20px 5px;
-}
-
-.form-grid-bottom {
-    display: grid;
-    grid-template-columns: repeat(5, minmax(max-content, 1fr));
-    grid-template-rows: repeat(3, min-content);
-    gap: 20px 10px;
-}
-
-/* gb = grid-bottom */
-.gb-item1 {
-    grid-column: 3 / span 1;
-}
-
-.gb-item2 {
-    grid-column: 2 / span 1 ;
-}
-
-.gb-item3 {
-    /* grid-column: 3 / span 1; */
-}
-
-.gb-item4 {
-    grid-column: 3 / span 1;
-}
-
-.gb-item5 {
-    grid-column: 2 / span 1;
-}
-
-.gb-item6 {
-    grid-column: 4 / span 1;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-
-.btn-underline {
-    display: block;
-    color: #4c96ff;
-    border: none;
-    border-bottom: 1px solid #4c96ff;
-    padding: 5px;
-    background-color: transparent;
-    margin: 0 auto;
-    border-radius: 3px;
-    transition: all .1s ease-in;
-}
-
-.btn-underline:hover {
-    background-color: #4c96ff;
-    color: white;
-}
-
-.btn:focus,
-.btn-underline:focus {
-    outline: none;
 }
