--- a/src/app/confirm-mand/confirm-mand.component.html
+++ b/src/app/confirm-mand/confirm-mand.component.html
@@ -1,59 +1,71 @@
-<h4>Final confirmation</h4>
-    <div class="body">
-      <div class="Bank-logo">
-          LOGO
-      </div>
-      <div class="Bank-use">
-          Bank Use. This area can be used by the bank for their promotional message, other related information
-      </div>
-   
-     
-      <div class="mandate">
-          <div class="mandate-details">
-              
-              <div class="mandate-form">
-                  <div class="mandate-form-grid">
-                      <label for="mandate-issued-to" class="inputLabel">Mandate issued to</label>
-                      <input id="mandate-issued-to" class="inputField" 
-                      [(ngModel)]="customer.corporateName" name = "corporateName" />
-
-                      <label for="start-date" class="inputLabel">Start date</label>
-                      <input id="start-date" class="inputField" 
-                      [(ngModel)]="customer.startDt" name = "startDt"/>
-
-                      <label for="end-date" class="inputLabel">End date</label>
-                      <input id="end-date" class="inputField"
-                      [(ngModel)]="customer.endDt" name = "endDt" />
-
-                      <label for="frequency" class="inputLabel">Frequency</label>
-                      <input id="frequency" class="inputField"
-                       [(ngModel)]="customer.frequency" name = "frequency" />
-                      
-                      <label for="amount-figures" class="inputLabel">Amount in figures</label>
-                      <input id="amount-figures" class="inputField" />
-                      
-                      <label for="amount-words" class="inputLabel">Amount in words</label>
-                      <input id="amount-words" class="inputField" />
-                      
-                      <label for="mandate-purpose" class="inputLabel">Purpose of mandate</label>
-                      <input id="mandate-purpose" class="inputField" />
-                  </div>
-                  
-                  
-                  
-                  
-                  <p class="powered-by">E-Mandate powered by</p>
-                  <div class="brands">
-                      <div class="brands__image-wrapper">
-                          <img src="../assets/NACH-Logo.png" class="brands__image" />
-                      </div>
-                      <div class="brands__image-wrapper">
-                          <img src="../assets/NACH.jpg" class="brands__image" />
-                      </div>
-                  </div>
-
-
-              </div>
-          </div>
+<div class="body">
+  <div class="bank-logo">
+      <div class="logo">
+          <p class="bank-logo-text">Bank Logo</p>
       </div>
   </div>
+  <div class="bank-use">
+      <p class="bank-use-text">
+          (Banks use) This area can be used by the bank for
+          their promotional message, other related information
+      </p>
+  </div>
+  <div class="confirmation-form">
+      <label class="confirmation-label">
+          Mandate issued to
+      </label>
+      <input type="text" class="confirmation-input" disabled placeholder="Corporate name"
+          [(ngModel)]="customer.corporateName" name="corporateName">
+  </div>
+  <div class="confirmation-form">
+      <label class="confirmation-label">
+          Start Date
+      </label>
+      <input type="date" class="confirmation-input" disabled [(ngModel)]="customer.startDt" name="startDt">
+  </div>
+  <div class="confirmation-form">
+      <label class="confirmation-label">
+          End Date
+      </label>
+      <input type="date" class="confirmation-input" disabled [(ngModel)]="customer.endDt" name="endDt">
+  </div>
+  <div class="confirmation-form">
+      <label class="confirmation-label-amount">
+          Amount in figures
+      </label>
+      <input type="text" class="confirmation-input-rupee" disabled placeholder="Rupee"
+          [(ngModel)]="customer.amount" name="amount">
+      <input type="text" class="confirmation-input-paise" disabled placeholder="Paise">
+  </div>
+  <div class="confirmation-form">
+      <label class="confirmation-label">
+          Amount in words
+      </label>
+      <input type="text" class="confirmation-input" disabled placeholder="To be populated by bank">
+  </div>
+  <div class="confirmation-form">
+      <label class="confirmation-label">
+          Purpose of mandate
+      </label>
+      <input type="text" class="confirmation-input" disabled placeholder="As per NPCI category">
+  </div>
+  <div class="success-area">
+      <img src="../assets/green-tick.jpg"
+          class="tick">
+      <p class="success-text">Your E-Mandate registration is successfully completed.
+          Your reference ID for E-Mandate registration is <b>XXXX.</b></p>
+  </div>
+  <div class="query-area">
+      <p class="query-text">In case of any issues/ query related to E-mandate registration
+          you may write to xxxxxx@xxxx.xx or call xxxxxxxxxxxxx</p>
+  </div>
+  <p class="powered-by">E-Mandate powered by</p>
+  <div class="brands">
+      <div class="brands__image-wrapper">
+          <img src="../assets/NACH-Logo.png" class="brands__image" />
+      </div>
+      <div class="brands__image-wrapper">
+          <img src="../assets/NACH.jpg" class="brands__image" />
+      </div>
+  </div>
+</div>
