--- a/src/app/mandate/mandate.component.css
+++ b/src/app/mandate/mandate.component.css
@@ -1,83 +1,113 @@
 .body{
-    margin:0px 350px 0px 350px;
     border: 1px solid black;
-    padding: 5px;
+    margin:25px auto;
+    width:60%;
 }
-.logo{
-    text-align: center;
-    
+.Bank-logo-area{
+    margin:5px auto;
+    height: 15%;
+    width: 98%;
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
 }
-.row-logo{
-    border:4px solid black;
-    margin :5px 0px 0px 0px;
+p{
+    font-size: 1.8vw;
 }
-.row-Desc{
-    margin: 15px 0px 5px 0px ;
-    border:4px solid black;
-}
-.text{
-    margin:0px 5px 0px 5px;
-}
-.row-mandate{
-    margin: 15px 0 0 0;
-    text-align:center;
-    border: 4px solid black;
-}
-.form-inputs{
-    width: 100%;
+.mandate-text-area{
+    margin: 20px auto;
+    width: 98%;
+    border: 3px solid black;
+    justify-content: stretch;
 }
 .mandate-text{
-    text-align: center;
-    margin: auto;
+    font-size: 1.5vw;
+    padding-left: 15px;
+}
+.mandate-details-area{
+    margin:25px auto;
+    width: 90%;
+    height: 5%;
+    border: 3px solid black;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; 
+}
+.mandate-details-text{
+    font-size: 1.5vw;
+    
+}
+.mandate-detail-form{
+    margin: 20px auto;
+    width: 90%;
+    display: flex;
+    justify-content:flex-start;
 
 }
-h5{
-    display: inline-block;
+.form-label{
+    flex:1;
+    /* border: 1px solid black; */
+     
 }
-.row-form{
-    margin: 15px 0 0 0;
-    
-    
+.form-input{
+    flex: 1;
 }
-
-table,tr{
-    width: 100%;
-    border-collapse: collapse;
-    
-    
-
-}
-th,td{
-    padding: 10px 0px 10px 0px;
-    text-align: center;
-}
-.form-inputs-rupee{
-    width: 80%;
-    display: inline-block;
-}
-.form-inputs-paise{
+.form-input-paise{
     width: 20%;
-    display: inline-block;
+
 }
-.buttons{
-    margin: 15px 0px 0px 5px;
-    padding: 5px;
+.form-input-rupee{
+    width: 60%;
+    /* padding-left: 6/5px; */
+}
+.form-label-amount{
+    /* border:1px solid black; */
+    flex-grow:1;
+    width: 80%;
+    /* min-width: 300px; */
+    
+    /* flex-wrap: wrap; */
+}
+.btn-group{
+    display: flex;
+    margin: 40px auto;
+    justify-content: space-evenly;
+    width: 80%;
+}
+.btn{
+    background-color:whitesmoke;
+    border-radius: 2px;
+    text-decoration: none;
+    box-shadow: black;
+    box-sizing: border-box;
+    border-color: black;
+    padding: 5px 5px 5px 5px;
+
+    
+}
+.btn:hover{
+    background-color: darkgray;
+    transition:all 0.4s;
+    cursor:pointer;
+    
+}
+.powered-by {
     text-align: center;
-}
-.proceed-button,.Cancel-button{
-    padding: 5px 15px 5px 15px;
-    margin: 0px 75px 0px 75px;
-    font-weight: bold;
-    
-}
-.Images{
-    margin: 15px 0px 0px 200px;
-    text-align: center;
-    
-    display: inline-flex;
-    
-}
-.npci-image,.Nach-image{
-    width: 150px;
+    margin: 45px 0 10px 0;
+    font-size: 11px;
 }
 
+.brands {
+    display: flex;
+    justify-content: center;
+}
+
+.brands__image-wrapper {
+    width: 100px;
+}
+
+.brands__image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
