--- a/src/app/mandate/mandate.component.html
+++ b/src/app/mandate/mandate.component.html
@@ -1,85 +1,80 @@
-
-    <div class="body">
-        <div class="row-logo">
-            <div class="col" style="height: 150px;">
-                <p class="logo">BANK LOGO</p>
+<div class="body">
+        <div class="Bank-logo-area">
+            <div class="Bank-logo">
+                <p>Bank Logo</p>
             </div>
         </div>
-        <div class="row-Desc">
-            <div class="text">
-                <span class="desc-text">Dear Customer,<br>
-                    Your in the process of registration of a E-Mandate. Please click <b>"proceed"</b> to initiate
-                    mandate
-                    registration process if the below mentioned fields are correct.
-                </span>
+        <div class="mandate-text-area">
+            <div class="mandate-text">
+                <p class="mandate-text">Dear Customer,<br>Your in the process of registration of a E-Manda
+                     click <b>"proceed"</b> to initiate mandate registration process 
+                     if the below mentioned fields are correct</p>
             </div>
         </div>
-        <div class="row-mandate">
-            <span class="mandate-text">
-                <h3>Mandate details:</h3>
-            </span>
+        <div class="mandate-details-area">
+            <div class="mandate-details-text">
+                <p class="mandate-details-text">Mandate details</p>
+            </div>
         </div>
-        <div class="row-form">
-            <form class="form-mandate">
-                <table>
-                    <tr>
-                        <th>Account number</th>
-                        <td>
-                            <input type="text" disabled class="form-inputs" placeholder="customer account number"
-                             [(ngModel)]="customer.accountNo" name = "accountNo">
-                         </td>
-                    </tr>
-                    <tr>
-                        <th>Mandate issued to</th>
-                        <td><input type="text" disabled class="form-inputs" placeholder="corporate name"
-                            [(ngModel)]="customer.corporateName" name = "corporateName"></td>
-                    </tr>
-                    <tr>
-                        <th>Start Date</th>
-                        <td><input type="date" disabled class="form-inputs"
-                            [(ngModel)]="customer.startDt" name = "startDt"></td>
-                    </tr>
-                    <tr>
-                        <th>End Date</th>
-                        <td><input type="date" disabled class="form-inputs"
-                            [(ngModel)]="customer.endDt" name = "endDt"></td>
-                    </tr>
-                    <tr>
-                        <th>Frequency</th>
-                        <td><input type="text" disabled class="form-inputs"
-                            [(ngModel)]="customer.frequency" name = "frequency"></td>
-                    </tr>
-                    <tr>
-                        <th>Amount in figures</th>
-                        <td><input type="text" class="form-inputs-rupee" placeholder="rupee" disabled
-                            [(ngModel)]="customer.amount" name = "amount">
-                            <input type="text"
-                                class="form-inputs-paise" placeholder="paise" disabled></td>
-                    </tr>
-                    <tr>
-                        <th>Amount in words</th>
-                        <td><input type="text" class="form-inputs" placeholder="To be populated by bank" disabled></td>
-                    </tr>
-                    <tr>
-                        <th>Purpose of mandate</th>
-                        <td><input type="text" class="form-inputs" placeholder="As per NPCI category" disabled></td>
-                    </tr>
-                </table>
+        <div class="mandate-detail-form">
+            <label class="form-label">Account number</label>
+            
+                <input type="text" class="form-input" disabled placeholder="Customer account number"
+                [(ngModel)]="customer.accountNo" name = "accountNo">
+        </div>
+        <div class="mandate-detail-form">
+            <label class="form-label">Mandate Issued To</label>
+            
+                <input type="text" class="form-input" disabled placeholder="Corporate name"
+                [(ngModel)]="customer.corporateName" name = "corporateName">
+        </div>
+        <div class="mandate-detail-form">
+            <label class="form-label">Start Date</label>
+            
+                <input type="date" class="form-input" disabled
+                [(ngModel)]="customer.startDt" name = "startDt">
+        </div>
+        <div class="mandate-detail-form">
+            <label class="form-label">End Date</label>
+            
+                <input type="date" class="form-input" disabled
+                [(ngModel)]="customer.endDt" name = "endDt">
+        </div>
+        <div class="mandate-detail-form">
+            <label class="form-label">Frequency</label>
+            
+                <input type="text" class="form-input" disabled
+                [(ngModel)]="customer.frequency" name = "frequency">
+        </div>
+        <div class="mandate-detail-form">
+            <label class="form-label-amount">Amount in figure</label>
+            
+                <input type="text" class="form-input-rupee" disabled placeholder="Rupee"
+                [(ngModel)]="customer.amount" name = "amount">
+                <input type="text" class="form-input-paise" disabled placeholder="paise">
+        </div>
+        <div class="mandate-detail-form">
+            <label class="form-label">Amount in words</label>
+            
+                <input type="text" class="form-input" disabled placeholder="To be populated by bank">
+        </div>
+        <div class="mandate-detail-form">
+            <label class="form-label">Purpose of mandate</label>
+            
+                <input type="text" class="form-input" disabled placeholder="As per NPCI category">
+        </div>
 
-                <div class="buttons">
-                    <button class="proceed-button" type="submit" routerLink = "/proceed">Proceed</button>
-                    <button class="Cancel-button">Cancel</button>
-                </div>
-                <div class="Images">
-                    <img src="../assets/NACH-Logo.png" class="Nach-image" alt="NACH">
-                    <p>E-Mandate<br>Powered by</p>
-                    <img src="../assets/NACH.jpg" class="npci-image" alt="npci">
-
-                </div>
-
-            </form>
-            <div>
-
+        <div class="btn-group">
+            <button class="btn" type="submit" routerLink = "/proceed">Proceed</button>
+            <button class="btn">Cancel</button>
+        </div>
+        <p class="powered-by">E-Mandate powered by</p>
+        <div class="brands">
+            <div class="brands__image-wrapper">
+                <img src="../assets/NACH-Logo.png" class="brands__image" />
+            </div>
+            <div class="brands__image-wrapper">
+                <img src="../assets/NACH.jpg" class="brands__image" />
             </div>
         </div>
     </div>
