--- a/src/app/reject-mandate/reject-mandate.component.css
+++ b/src/app/reject-mandate/reject-mandate.component.css
@@ -1,12 +1,12 @@
-body{
+.body{
     border:1px solid black;
-    margin: auto auto;
+    margin: 10% auto;
     width: 80%;
     height: 70%;
 }
 .Bank-logo{
     border-bottom: 2px solid #000000;
-    height: 15%;
+    height: 100px;
     display: flex;
     justify-content: center;
 }
