--- a/src/app/authorise-mand/authorise-mand.component.html
+++ b/src/app/authorise-mand/authorise-mand.component.html
@@ -96,10 +96,10 @@
                     <p class="powered-by">E-Mandate powered by</p>
                     <div class="brands">
                         <div class="brands__image-wrapper">
-                            <img src="../assets/NACH-Logo.png" class="brands__image" />
+                            <img src="../assets/images/NACH-Logo.png" class="brands__image" />
                         </div>
                         <div class="brands__image-wrapper">
-                            <img src="../assets/NACH.jpg" class="brands__image" />
+                            <img src="../assets/images/NACH.jpg" class="brands__image" />
                         </div>
                     </div>
 
