--- a/src/app/confirm-mand/confirm-mand.component.html
+++ b/src/app/confirm-mand/confirm-mand.component.html
@@ -50,7 +50,7 @@
       <input type="text" class="confirmation-input" disabled placeholder="As per NPCI category">
   </div>
   <div class="success-area">
-      <img src="../assets/green-tick.jpg"
+      <img src="../assets/images/green-tick.jpg"
           class="tick">
       <p class="success-text">Your E-Mandate registration is successfully completed.
           Your reference ID for E-Mandate registration is <b>XXXX.</b></p>
@@ -62,10 +62,10 @@
   <p class="powered-by">E-Mandate powered by</p>
   <div class="brands">
       <div class="brands__image-wrapper">
-          <img src="../assets/NACH-Logo.png" class="brands__image" />
+          <img src="../assets/images/NACH-Logo.png" class="brands__image" />
       </div>
       <div class="brands__image-wrapper">
-          <img src="../assets/NACH.jpg" class="brands__image" />
+          <img src="../assets/images/NACH.jpg" class="brands__image" />
       </div>
   </div>
 </div>
