--- a/src/app/reject-mandate/reject-mandate.component.html
+++ b/src/app/reject-mandate/reject-mandate.component.html
@@ -12,7 +12,7 @@
       </p>
   </div>
   <div class="rejection-reason-area">
-      <img src="../assets/cancel-xxl.png"
+      <img src="../assets/images/cancel-xxl.png"
        class="cancel-image">
        <p class="rejection-area-text">Your E-Mandate registration is rejected
             due to <b>( reason for rejection )</b></p>
@@ -24,10 +24,10 @@
   <p class="powered-by">E-Mandate powered by</p>
                   <div class="brands">
                       <div class="brands__image-wrapper">
-                          <img src="../assets/NACH-Logo.png" class="brands__image" />
+                          <img src="../assets/images/NACH-Logo.png" class="brands__image" />
                       </div>
                       <div class="brands__image-wrapper">
-                          <img src="../assets/NACH.jpg" class="brands__image" />
+                          <img src="../assets/images/NACH.jpg" class="brands__image" />
                       </div>
                   </div>
                 </div>
